# Eureka

./: setup.cfg
.github/workflows/: flake8_linting.yml
demos/: LCFitting_Demo.py
demos/HST/: S5_wfc3_template.ecf
demos/JWST/: S5_template.ecf
eureka/S1_detector_processing/: s1_process.py
eureka/S3_data_reduction/: __init__.py  eureka_badmask.py  eureka_chunkbad.py  miri.py  nircam.py  s3_reduce.py
eureka/S4_generate_lightcurves/: plots_s4.py
eureka/lib/: apphot.py
eureka/lightcurve_fitting/: lightcurve.py  models.py
eureka/tests/: S4_NIRCam.ecf  S4_NIRSpec.ecf  S5_NIRCam.ecf  S5_NIRSpec.ecf  test_general.py
eureka/tests/NIRCam_ecfs/: S3_NIRCam.ecf  S4_NIRCam.ecf
eureka/tests/NIRSpec_ecfs/: S2_NIRSpec.ecf  S3_NIRSpec.ecf  S4_NIRSpec.ecf
