[metadata]
name = eureka
version = 0.0.1
author = Section 5
author_email = kbstevenson@gmail.com
description = Lightcurve fitting package for time-series observations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/kevin218/Eureka
project_urls =
    Bug Tracker = https://github.com/kevin218/Eureka/issues
    Source Code = https://github.com/kevin218/Eureka
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    astropy
    batman-package
    bokeh
    ccdproc
    corner
    crds
    cython
    dynesty > 1.0
    emcee > 3.0.0
    george
    h5py
    lmfit
    matplotlib
    numpy >= 1.20.0
    pandas
    photutils
    scipy >= 1.4.0
    stdatamodels    
    tqdm
    svo_filters


[options.packages.find]
where = src

[options.extras_require]
jwst =
  jwst==1.3.3
  stcal
  asdf>=2.7.1,<2.11.0
  crds
  gwcs
hst =
  image_registration @ git+https://github.com/keflavich/image_registration.git
docs =
  sphinx
  sphinx-automodapi
  numpydoc
  nbsphinx
  recommonmark
  myst-parser
  sphinx-rtd-theme
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
